compositor: add window back to compositor

Remove window from compositor when calling meta_window_free and
make sure to re-add window to the compositor when we re-create
MetaWindow on MapRequest.

https://bugzilla.gnome.org/show_bug.cgi?id=504876
https://bugzilla.gnome.org/show_bug.cgi?id=751833